[tool.poetry]
name = "pulumi-aws-native-1747"
version = "0.1.0"
description = "Reproduction of pulumi-aws-native issue #1747"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi = ">=3.0.0,<4.0.0"
pulumi-aws-native = "^0.119.0"
aws = "^0.2.5"
pulumi-aws = "^6.49.1"
pulumi-kubernetes = "^4.17.1"
pulumi-awsx = "^2.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
